--- Auto-Git Commit ---

--- a/Linux/Debug/debug/tools/perf/1. perf 简介.md
+++ b/Linux/Debug/debug/tools/perf/1. perf 简介.md
@@ -4,37 +4,36 @@
 <!-- code_chunk_output -->
 
 - [1. 系统级性能优化](#1-系统级性能优化)
-- [Perf 简介](#perf-简介)
-  - [](#)
-- [2. Perf 编译安装](#2-perf-编译安装)
-  - [2.1. 测试](#21-测试)
-  - [2.2. 编译](#22-编译)
-  - [2.3. 安装](#23-安装)
-  - [2.4. 帮助文档](#24-帮助文档)
-- [3. Perf简介](#3-perf简介)
-  - [3.1. 简单例子](#31-简单例子)
-  - [3.2. 基本原理](#32-基本原理)
-  - [3.3. 工作原理](#33-工作原理)
-    - [3.3.1. Symbols](#331-symbols)
-- [4. Perf 功能概述](#4-perf-功能概述)
-  - [4.1. 全局性概况](#41-全局性概况)
-  - [4.2. 全局细节](#42-全局细节)
-  - [4.3. 特定功能分析](#43-特定功能分析)
-  - [4.4. perf record](#44-perf-record)
-  - [4.5. 可视化工具perf timechart](#45-可视化工具perf-timechart)
-- [5. Perf性能事件](#5-perf性能事件)
-  - [5.1. 三种工作模式](#51-三种工作模式)
-  - [5.2. 基于事件的采样](#52-基于事件的采样)
-  - [5.3. 三种类型性能事件](#53-三种类型性能事件)
-    - [5.3.1. 动态追踪](#531-动态追踪)
-    - [5.3.2. 事件限定符](#532-事件限定符)
-  - [5.4. 性能事件的属性](#54-性能事件的属性)
-    - [5.4.1. PMI中断和PEBS中断](#541-pmi中断和pebs中断)
-    - [5.4.2. 性能事件的精度级别](#542-性能事件的精度级别)
-    - [5.4.3. 其他属性](#543-其他属性)
-  - [5.5. 没有预定义字符描述的性能事件](#55-没有预定义字符描述的性能事件)
-  - [5.6. perf list查看所有性能事件](#56-perf-list查看所有性能事件)
-  - [5.7. 性能事件指定错误](#57-性能事件指定错误)
+- [2. Perf 简介](#2-perf-简介)
+- [3. Perf 编译安装](#3-perf-编译安装)
+  - [3.1. 测试](#31-测试)
+  - [3.2. 编译](#32-编译)
+  - [3.3. 安装](#33-安装)
+  - [3.4. 帮助文档](#34-帮助文档)
+- [4. 基本原理](#4-基本原理)
+  - [4.1. 三种工作模式](#41-三种工作模式)
+  - [4.2. 基于事件的采样](#42-基于事件的采样)
+  - [4.3. 简单示例](#43-简单示例)
+  - [4.4. cycles原理](#44-cycles原理)
+  - [4.5. 工作原理](#45-工作原理)
+    - [4.5.1. Symbols](#451-symbols)
+- [5. Perf 功能概述](#5-perf-功能概述)
+  - [5.1. 全局性概况](#51-全局性概况)
+  - [5.2. 全局细节](#52-全局细节)
+  - [5.3. 特定功能分析](#53-特定功能分析)
+  - [5.4. perf record](#54-perf-record)
+  - [5.5. 可视化工具perf timechart](#55-可视化工具perf-timechart)
+- [6. Perf性能事件](#6-perf性能事件)
+  - [6.1. 三种类型性能事件](#61-三种类型性能事件)
+    - [6.1.1. 动态追踪](#611-动态追踪)
+    - [6.1.2. 事件限定符](#612-事件限定符)
+  - [6.2. 性能事件的属性](#62-性能事件的属性)
+    - [6.2.1. PMI中断和PEBS中断](#621-pmi中断和pebs中断)
+    - [6.2.2. 性能事件的精度级别](#622-性能事件的精度级别)
+    - [6.2.3. 其他属性](#623-其他属性)
+  - [6.3. 没有预定义字符描述的性能事件](#63-没有预定义字符描述的性能事件)
+  - [6.4. perf list查看所有性能事件](#64-perf-list查看所有性能事件)
+  - [6.5. 性能事件指定错误](#65-性能事件指定错误)
 
 <!-- /code_chunk_output -->
 
@@ -51,7 +50,7 @@
 
 而在**性能剖析阶段**，则需要借助于现有的**profiling工具**，如 perf，VTune，Oprofile 等。
 
-# Perf 简介
+# 2. Perf 简介
 
 Linux内核实现了非常有价值的性能分析基础设施（perf infrastructure），可以用于剖析各种CPU或软件事件。这一功能由`perf_events`**接口**暴露，并提供 **perf** 这一**用户空间工具**，通过此工具，你可以发现以下问题的答案：
 
@@ -64,7 +63,7 @@ Linux内核实现了非常有价值的性能分析基础设施（perf infrastruc
 * 线程**离开CPU的原因** 
 
 
-perf是一款Linux性能分析工具。Linux性能计数器是一个新的基于内核的子系统，它提供一个性能分析框架，比如硬件（CPU、PMU(Performance Monitoring Unit)）功能和软件(软件计数器、tracepoint)功能。通过perf，应用程序可以利用PMU、tracepoint和内核中的计数器来进行性能统计。它不但可以分析制定应用程序的性能问题（per thread），也可以用来分析内核的性能问题。
+Linux性能计数器是一个新的基于内核的子系统，它提供一个性能分析框架，比如硬件（CPU、PMU(Performance Monitoring Unit)）功能和软件(软件计数器、tracepoint)功能。通过perf，应用程序可以利用PMU、tracepoint和内核中的计数器来进行性能统计。它不但可以分析制定应用程序的性能问题（per thread），也可以用来分析内核的性能问题。
 
 总之perf是一款很牛逼的综合性分析工具，大到系统全局性性能，再小到进程线程级别，甚至到函数及汇编级别。
 
@@ -79,31 +78,29 @@ perf_events是内核2.6+的一部分，用户空间工具perf在包`linux-tools-
 - 要想从剖析中获得更多内核相关信息，你需要`符号（Symbol）`和`栈追踪`，这可能需要安装额外的包，甚至使用**特定选项重新编译**你的内核。
 - 剖析**用户空间代码**时，也要求目标应用程序的**调试信息（符号表**）被保留。
 
-## 
-
-# 2. Perf 编译安装
+# 3. Perf 编译安装
 
 在内核源码包中的位置 tools/perf。
 
-## 2.1. 测试
+## 3.1. 测试
 
 ```
 [root@centos7 linux]# make -C tools/perf -f tests/make
 ```
 
-## 2.2. 编译
+## 3.2. 编译
 
 ```
 [root@centos7 linux]# make -C tools/perf
 ```
 
-## 2.3. 安装
+## 3.3. 安装
 
 ```
 [root@centos7 linux]# make -C tools/perf install
 ```
 
-## 2.4. 帮助文档
+## 3.4. 帮助文档
 
 ```
 man 1 perf
@@ -114,10 +111,27 @@ man 1 perf-report
 man 1 perf-list
 ```
 
-# 3. Perf简介
+# 4. 基本原理
 
+## 4.1. 三种工作模式
 
-## 3.1. 简单例子
+有三种工作模式：
+
+* counting，在**内核上下文**对**各种指标**进行计数
+* sampling，**对事件进行采样**，并将性能数据存放到**内核缓冲**，然后异步的写入到perf.data
+* bpf，4.4版本内核引入的新特性，允许在**内核**中执行一段**用户自定义的代码**，以执行高效的过滤、汇总
+
+## 4.2. 基于事件的采样
+
+perf_events的采样是基于事件进行的。**采样的周期**以**事件的数量来表示**，而**非基于时间**。当**目标事件计数溢出指定的数值**，则产生一个采样。
+
+样本中包含的信息取决于用户和工具指定的度量类型，但是最重要的信息是指令指针（instruction pointer），也就是程序被中断时所处的位置。
+
+这种基于中断的采样，在现代处理器上存在刹车效应。也就是说，样本中记录的指针，和程序被中断以处理PMU事件时的指令指针，可能相隔数十个指令。
+
+record子命令默认使用cycle事件，类似于定期采样。
+
+## 4.3. 简单示例
 
 我们先通过一个例子来看看perf究竟能干什么。程序`[pi.c]`是一个简单的计算Pi的CPU密集型程序。很显然，`[pi.c]`的热点在函数`do_pi()`中。
 
@@ -176,7 +190,7 @@ gcc pi.c -lm -o pi
 perf top -p $pid
 ```
 
-该命令利用**默认的性能事件**"cycles"对`[pi]`进行热点分析。"cycles"是**处理器周期事件**。这条命令能够分析出消耗处理器周期最多的代码，在处理器频率稳定的前提下，我们可以认为perf给出的热点代码就是消耗时间最多的代码。
+该命令利用**默认的性能事件**"cycles"对`[pi]`进行热点分析。"cycles"是**处理器周期事件**。这条命令能够分析出**消耗处理器周期最多的代码**，在处理器频率稳定的前提下，我们可以认为perf给出的热点代码就是消耗时间最多的代码。
 
 执行上述命令后，Perf会给出如下结果：
 
@@ -184,7 +198,7 @@ perf top -p $pid
 
 从上图可以看到，在`[pi]`程序执行期间，函数`do_pi()`消耗了62.57%的CPU周期，是消耗处理器周期最多的热点代码。这跟我们预想的一样。
 
-## 3.2. 基本原理
+## 4.4. cycles原理
 
 那么Perf是怎么做到的呢？以`cycles`性能事件为例
 
@@ -198,7 +212,7 @@ perf top -p $pid
 
 根据上述的perf采样原理可以得知，perf假设两次采样之间，即两次相邻的PMI中断之间系统执行的是同一个进程的同一个函数。这种假设会带来**一定的误差**，当感觉perf给出的**结果不准**时，不妨提高**采样频率**，perf会给出更加精确的结果。
 
-## 3.3. 工作原理
+## 4.5. 工作原理
 
 perf利用Linux的trace特性，可以用于实时跟踪，统计event计数(perf stat)；或者使用采样(perf record)，报告(perf report|script|annotate)的使用方式进行诊断。
 
@@ -212,7 +226,7 @@ perf命令行接口并不能利用所有的Linux trace特性，有些trace需要
 
 我们看到perf支持这么多的事件和trace，它依赖了很多的接口来干这件事情。
 
-### 3.3.1. Symbols
+### 4.5.1. Symbols
 
 没有符号表，无法将内存地址翻译成函数和变量名。
 
@@ -220,7 +234,7 @@ perf命令行接口并不能利用所有的Linux trace特性，有些trace需要
 
 https://developer.aliyun.com/article/65255
 
-# 4. Perf 功能概述
+# 5. Perf 功能概述
 
 perf 命令用法还是挺简单的，根据功能区分了COMMAND，每个COMMAND有各自的用法。
 
@@ -260,19 +274,19 @@ No.|sub-commands|comment
 26 | probe         |用于定义动态检查点。
 27 | trace         |类似strace功能。
 
-## 4.1. 全局性概况
+## 5.1. 全局性概况
 
 * perf list查看当前系统支持的性能事件；
 * perf bench对系统性能进行摸底；
 * perf test对系统进行健全性测试；
 * perf stat对全局性能进行统计；
 
-## 4.2. 全局细节
+## 5.2. 全局细节
 
 * perf top可以实时查看当前系统进程函数占用率情况；
 * perf probe可以自定义动态事件；
 
-## 4.3. 特定功能分析
+## 5.3. 特定功能分析
 
 perf kmem针对slab子系统性能分析；
 perf kvm针对kvm虚拟化分析；
@@ -281,7 +295,7 @@ perf mem分析内存slab性能；
 perf sched分析内核调度器性能；
 perf trace记录系统调用轨迹；
 
-## 4.4. perf record
+## 5.4. perf record
 
 最常用功能perf record，可以系统全局，也可以具体到**某个进程**，更甚具体到**某一进程某一事件**；可宏观，也可以很微观。
 
@@ -293,34 +307,18 @@ perf trace记录系统调用轨迹；
 * perf archive将相关符号打包，方便在其它机器进行分析；
 * perf script将perf.data输出可读性文本；
 
-## 4.5. 可视化工具perf timechart
+## 5.5. 可视化工具perf timechart
 
 perf timechart record记录事件；
 perf timechart生成output.svg文档；
 
-# 5. Perf性能事件
+# 6. Perf性能事件
 
 完整的性能事件列表见Intel手册`Performance Monitoring Events`
 
-## 5.1. 三种工作模式
 
-有三种工作模式：
 
-* counting，在**内核上下文**对各种指标进行计数
-* sampling，对事件进行采样，并将性能数据存放到**内核缓冲**，然后异步的写入到perf.data
-* bpf，4.4版本内核引入的新特性，允许在内核中执行一段用户自定义的代码，以执行高效的过滤、汇总
-
-## 5.2. 基于事件的采样
-
-perf_events的采样是基于事件进行的。**采样的周期**以**事件的数量来表示**，而**非基于时间**。当**目标事件计数溢出指定的数值**，则产生一个采样。
-
-样本中包含的信息取决于用户和工具指定的度量类型，但是最重要的信息是指令指针（instruction pointer），也就是程序被中断时所处的位置。
-
-这种基于中断的采样，在现代处理器上存在刹车效应。也就是说，样本中记录的指针，和程序被中断以处理PMU事件时的指令指针，可能相隔数十个指令。
-
-record子命令默认使用cycle事件，类似于定期采样。
-
-## 5.3. 三种类型性能事件
+## 6.1. 三种类型性能事件
 
 利用perf剖析程序性能时，需要指定**当前测试**的**性能事件**。性能事件是指在**处理器**或**操作系统**中发生的，可能影响到程序性能的硬件事件或软件事件。比如Cache丢失，流水线停顿，页面交换等。这些事件会对程序的执行时间造成较大的负面影响。在优化代码时，应尽可能减少此类事件发生。
 
@@ -344,21 +342,21 @@ perf定义的性能事件分为3类，分别是硬件性能事件、软件性能
 3. 动态追踪，软件可以被动态instrumented，在任何位置创建事件。对于**内核软件**，使用**kprobes框架**，对于**用户软件**，使用**uprobes**
 4. 定时追踪，以任意频率抓取快照，主要用于CPU剖析，工作机制是定期引发中断
 
-### 5.3.1. 动态追踪
+### 6.1.1. 动态追踪
 
 要启用内核动态追踪，需要使用内核编译参数`CONFIG_KPROBES=y`、`CONFIG_KPROBE_EVENTS=y`。要追踪基于帧指针的内核栈，需要内核编译参数`CONFIG_FRAME_POINTER=y`。
 
 要启用**用户动态追踪**，需要使用内核编译参数`CONFIG_UPROBES=y`、`CONFIG_UPROBE_EVENTS=y`
 
-### 5.3.2. 事件限定符
+### 6.1.2. 事件限定符
 
 事件有多种表示方式，最简单的是它的字符串表示。引用事件时，可以指定限定符：
 
 https://blog.gmem.cc/perf
 
-## 5.4. 性能事件的属性
+## 6.2. 性能事件的属性
 
-### 5.4.1. PMI中断和PEBS中断
+### 6.2.1. PMI中断和PEBS中断
 
 **硬件性能事件**由处理器的PMU提供支持。
 
@@ -374,7 +372,7 @@ https://blog.gmem.cc/perf
 perf top -e cycles:pp
 ```
 
-### 5.4.2. 性能事件的精度级别
+### 6.2.2. 性能事件的精度级别
 
 Perf 在采样精度上定义了 4 个级别.
 
@@ -387,7 +385,7 @@ Level | Comment
 
 目前X86处理器，包括Intel处理器与AMD处理器Jun仅能实现前3个精度级别。
 
-### 5.4.3. 其他属性
+### 6.2.3. 其他属性
 
 除了精度级别以外，事件还具有其他几个属性，均可以通过"event:X"的方式予以指定。
 
@@ -400,7 +398,7 @@ G | 在KVM虚拟机中，仅攻击Guest系统触发的性能事件。
 H | 仅统计Host系统触发的性能事件。
 p | 精度级别。
 
-## 5.5. 没有预定义字符描述的性能事件
+## 6.3. 没有预定义字符描述的性能事件
 
 另外需要补充的是，perf list工具仅列出了具有字符描述的**硬件性能事件**。而那些**没有预定义字符描述的性能事件**，也可以通过特殊方式使用。
 
@@ -423,7 +421,7 @@ perf stat -e r010b ls
 所以完整的性能事件列表见Intel手册`Performance Monitoring Events`
 
 
-## 5.6. perf list查看所有性能事件
+## 6.4. perf list查看所有性能事件
 
 不同型号的 CPU 支持的硬件性能事件不尽相同。不同版本的内核提供的软件 性能事件与 Tracepoint events 也不尽相同。因此，perf提供了list工具以查看当前软硬件平台支持的性能事件列表。
 
@@ -449,7 +447,7 @@ perf stat -e r010b ls
 
 ![2020-07-19-21-06-38.png](./images/2020-07-19-21-06-38.png)
 
-## 5.7. 性能事件指定错误
+## 6.5. 性能事件指定错误
 
 所以如果指定性能事件失败, 可能会有类似打印
 
