--- Auto-Git Commit ---

--- a/Linux/Debug/debug/tools/perf/1. perf 简介.md
+++ b/Linux/Debug/debug/tools/perf/1. perf 简介.md
@@ -12,7 +12,7 @@
   - [3.4. 帮助文档](#34-帮助文档)
 - [4. 基本原理](#4-基本原理)
   - [4.1. 三种工作模式](#41-三种工作模式)
-  - [4.2. 基于事件的采样](#42-基于事件的采样)
+    - [4.2. sampling: 基于事件的采样](#42-sampling-基于事件的采样)
   - [4.3. 简单示例](#43-简单示例)
   - [4.4. cycles原理](#44-cycles原理)
   - [4.5. 工作原理](#45-工作原理)
@@ -121,7 +121,8 @@ man 1 perf-list
 * sampling，**对事件进行采样**，并将性能数据存放到**内核缓冲**，然后异步的写入到perf.data
 * bpf，4.4版本内核引入的新特性，允许在**内核**中执行一段**用户自定义的代码**，以执行高效的过滤、汇总
 
-## 4.2. 基于事件的采样
+### counting
+### 4.2. sampling: 基于事件的采样
 
 perf_events的采样是基于事件进行的。**采样的周期**以**事件的数量来表示**，而**非基于时间**。当**目标事件计数溢出指定的数值**，则产生一个采样。
 
