--- Auto-Git Commit ---

--- a/Linux/Debug/debug/tools/perf/1. perf 简介.md
+++ b/Linux/Debug/debug/tools/perf/1. perf 简介.md
@@ -12,11 +12,13 @@
   - [3.4. 帮助文档](#34-帮助文档)
 - [4. 基本原理](#4-基本原理)
   - [4.1. 三种工作模式](#41-三种工作模式)
-    - [4.2. sampling: 基于事件的采样](#42-sampling-基于事件的采样)
-  - [4.3. 简单示例](#43-简单示例)
-  - [4.4. cycles原理](#44-cycles原理)
-  - [4.5. 工作原理](#45-工作原理)
-    - [4.5.1. Symbols](#451-symbols)
+    - [4.1.1. counting: 内核上下文的指标](#411-counting-内核上下文的指标)
+    - [4.1.2. sampling: 基于事件的采样](#412-sampling-基于事件的采样)
+    - [4.1.3. bpf: 用户自定义](#413-bpf-用户自定义)
+  - [4.2. 简单示例](#42-简单示例)
+  - [4.3. cycles原理](#43-cycles原理)
+  - [4.4. 工作原理](#44-工作原理)
+    - [4.4.1. Symbols](#441-symbols)
 - [5. Perf 功能概述](#5-perf-功能概述)
   - [5.1. 全局性概况](#51-全局性概况)
   - [5.2. 全局细节](#52-全局细节)
@@ -121,8 +123,10 @@ man 1 perf-list
 * sampling，**对事件进行采样**，并将性能数据存放到**内核缓冲**，然后异步的写入到perf.data
 * bpf，4.4版本内核引入的新特性，允许在**内核**中执行一段**用户自定义的代码**，以执行高效的过滤、汇总
 
-### counting
-### 4.2. sampling: 基于事件的采样
+### 4.1.1. counting: 内核上下文的指标
+
+
+### 4.1.2. sampling: 基于事件的采样
 
 perf_events的采样是基于事件进行的。**采样的周期**以**事件的数量来表示**，而**非基于时间**。当**目标事件计数溢出指定的数值**，则产生一个采样。
 
@@ -132,7 +136,9 @@ perf_events的采样是基于事件进行的。**采样的周期**以**事件的
 
 record子命令默认使用cycle事件，类似于定期采样。
 
-## 4.3. 简单示例
+### 4.1.3. bpf: 用户自定义
+
+## 4.2. 简单示例
 
 我们先通过一个例子来看看perf究竟能干什么。程序`[pi.c]`是一个简单的计算Pi的CPU密集型程序。很显然，`[pi.c]`的热点在函数`do_pi()`中。
 
@@ -199,7 +205,7 @@ perf top -p $pid
 
 从上图可以看到，在`[pi]`程序执行期间，函数`do_pi()`消耗了62.57%的CPU周期，是消耗处理器周期最多的热点代码。这跟我们预想的一样。
 
-## 4.4. cycles原理
+## 4.3. cycles原理
 
 那么Perf是怎么做到的呢？以`cycles`性能事件为例
 
@@ -213,7 +219,7 @@ perf top -p $pid
 
 根据上述的perf采样原理可以得知，perf假设两次采样之间，即两次相邻的PMI中断之间系统执行的是同一个进程的同一个函数。这种假设会带来**一定的误差**，当感觉perf给出的**结果不准**时，不妨提高**采样频率**，perf会给出更加精确的结果。
 
-## 4.5. 工作原理
+## 4.4. 工作原理
 
 perf利用Linux的trace特性，可以用于实时跟踪，统计event计数(perf stat)；或者使用采样(perf record)，报告(perf report|script|annotate)的使用方式进行诊断。
 
@@ -227,7 +233,7 @@ perf命令行接口并不能利用所有的Linux trace特性，有些trace需要
 
 我们看到perf支持这么多的事件和trace，它依赖了很多的接口来干这件事情。
 
-### 4.5.1. Symbols
+### 4.4.1. Symbols
 
 没有符号表，无法将内存地址翻译成函数和变量名。
 
