--- a/Linux/Debug/debug/tools/perf/1. perf 简介.md
+++ b/Linux/Debug/debug/tools/perf/1. perf 简介.md
@@ -5,17 +5,17 @@
 
 - [1. 系统级性能优化](#1-系统级性能优化)
 - [2. Perf 简介](#2-perf-简介)
+  - [# 4. 基本原理](#4-基本原理)
+  - [4.1. 三种工作模式](#41-三种工作模式)
+    - [4.1.1. counting: 内核上下文的指标](#411-counting-内核上下文的指标)
+    - [4.1.2. sampling: 基于事件的采样](#412-sampling-基于事件的采样)
+    - [4.1.3. bpf: 用户自定义](#413-bpf-用户自定义)
 - [3. Perf 编译安装](#3-perf-编译安装)
   - [3.1. 测试](#31-测试)
   - [3.2. 编译](#32-编译)
   - [3.3. 安装](#33-安装)
   - [3.4. 帮助文档](#34-帮助文档)
-- [4. 基本原理](#4-基本原理)
-  - [4.1. 三种工作模式](#41-三种工作模式)
-    - [4.1.1. counting: 内核上下文的指标](#411-counting-内核上下文的指标)
-    - [4.1.2. sampling: 基于事件的采样](#412-sampling-基于事件的采样)
-    - [4.1.3. bpf: 用户自定义](#413-bpf-用户自定义)
-  - [4.2. 简单示例](#42-简单示例)
+- [4.2. 简单示例](#42-简单示例)
   - [4.3. cycles原理](#43-cycles原理)
   - [4.4. 工作原理](#44-工作原理)
     - [4.4.1. Symbols](#441-symbols)
@@ -79,6 +79,31 @@ perf_events是内核2.6+的一部分，用户空间工具perf在包`linux-tools-
 - 要想从剖析中获得更多内核相关信息，你需要`符号（Symbol）`和`栈追踪`，这可能需要安装额外的包，甚至使用**特定选项重新编译**你的内核。
 - 剖析**用户空间代码**时，也要求目标应用程序的**调试信息（符号表**）被保留。
 
+## # 4. 基本原理
+
+## 4.1. 三种工作模式
+
+有三种工作模式：
+
+* counting，在**内核上下文**对**各种指标**进行计数
+* sampling，**对事件events进行采样**，并将性能数据存放到**内核缓冲**，然后异步的写入到perf.data
+* bpf，4.4版本内核引入的新特性，允许在**内核**中执行一段**用户自定义的代码**，以执行高效的过滤、汇总
+
+### 4.1.1. counting: 内核上下文的指标
+
+
+### 4.1.2. sampling: 基于事件的采样
+
+perf_events的采样是基于事件进行的。**采样的周期**以**事件的数量来表示**，而**非基于时间**。当**目标事件计数溢出指定的数值**，则产生一个采样。
+
+样本中包含的信息取决于用户和工具指定的度量类型，但是最重要的信息是指令指针（instruction pointer），也就是程序被中断时所处的位置。
+
+这种基于中断的采样，在现代处理器上存在刹车效应。也就是说，样本中记录的指针，和程序被中断以处理PMU事件时的指令指针，可能相隔数十个指令。
+
+record子命令默认使用cycle事件，类似于定期采样。
+
+### 4.1.3. bpf: 用户自定义
+
 # 3. Perf 编译安装
 
 在内核源码包中的位置 tools/perf。
@@ -112,32 +137,9 @@ man 1 perf-report
 man 1 perf-list
 ```
 
-# 4. 基本原理
-
-## 4.1. 三种工作模式
-
-有三种工作模式：
-
-* counting，在**内核上下文**对**各种指标**进行计数
-* sampling，**对事件进行采样**，并将性能数据存放到**内核缓冲**，然后异步的写入到perf.data
-* bpf，4.4版本内核引入的新特性，允许在**内核**中执行一段**用户自定义的代码**，以执行高效的过滤、汇总
-
-### 4.1.1. counting: 内核上下文的指标
 
 
-### 4.1.2. sampling: 基于事件的采样
-
-perf_events的采样是基于事件进行的。**采样的周期**以**事件的数量来表示**，而**非基于时间**。当**目标事件计数溢出指定的数值**，则产生一个采样。
-
-样本中包含的信息取决于用户和工具指定的度量类型，但是最重要的信息是指令指针（instruction pointer），也就是程序被中断时所处的位置。
-
-这种基于中断的采样，在现代处理器上存在刹车效应。也就是说，样本中记录的指针，和程序被中断以处理PMU事件时的指令指针，可能相隔数十个指令。
-
-record子命令默认使用cycle事件，类似于定期采样。
-
-### 4.1.3. bpf: 用户自定义
-
-## 4.2. 简单示例
+# 4.2. 简单示例
 
 我们先通过一个例子来看看perf究竟能干什么。程序`[pi.c]`是一个简单的计算Pi的CPU密集型程序。很显然，`[pi.c]`的热点在函数`do_pi()`中。
 
@@ -231,6 +233,8 @@ perf命令行接口并不能利用所有的Linux trace特性，有些trace需要
 这张图大致列出了perf支持的跟踪事件，从kernerl到user space，支持块设备、网络、CPU、文件系统、内存等，同时还支持系统调用，用户库的事件跟踪。
 
 我们看到perf支持这么多的事件和trace，它依赖了很多的接口来干这件事情。
+
+你可以使用perf list输出当前内核perf 支持的预置events
 
 ### 4.4.1. Symbols
 
