--- a/Linux/Debug/debug/tools/perf/1. perf 简介.md
+++ b/Linux/Debug/debug/tools/perf/1. perf 简介.md
@@ -56,7 +56,7 @@
 
 本文将介绍一下perf的用法，网上很多叫法如`perf_events` , `perf profiler` , `Performance Counters for Linux(Linux性能计数器, PCL)`。叫法不同，都指perf。
 
-这一功能由`perf_events`**接口**暴露，并提供 **perf** 这一**用户空间工具**，通过此工具，你可以发现以下问题的答案：
+通过perf，你可以发现以下问题的答案：
 
 * 为什么内核使用**太多的CPU**，**哪些代码**使用了这些CPU时间
 * **什么代码**导致**CPU二级缓存不命中**
@@ -66,20 +66,39 @@
 * 某个内核函数是否**被频繁调用**
 * 线程**离开CPU的原因** 
 
-Perf是一个新的基于内核的子系统，它提供一个性能分析框架，比如硬件（CPU、PMU(Performance Monitoring Unit)）功能和软件(软件计数器、tracepoint)功能。通过perf，应用程序可以利用PMU、tracepoint和内核中的计数器来进行性能统计。它不但可以分析制定应用程序的性能问题（per thread），也可以用来分析内核的性能问题。
+
+
+Perf基于**事件采样**原理，以**性能事件**为基础，支持针对处理器相关性能指标与操作系统相关性能指标的性能剖析。可用于性能瓶颈的查找与热点代码的定位。这一功能由`perf_events`**接口**暴露，并提供 **perf** 这一**用户空间工具**，
+
+Perf是一个新的基于内核的子系统，它提供一个性能分析框架，比如硬件（CPU、PMU(Performance Monitoring Unit)）功能和软件(软件计数器、tracepoint)功能。
+
+通过perf，应用程序可以利用**PMU**、**tracepoint**和**内核中的计数器**来进行性能统计。它不但可以分析制定应用程序的性能问题（per thread），也可以用来分析内核的性能问题。
 
 总之perf是一款很牛逼的综合性分析工具，大到系统全局性性能，再小到进程线程级别，甚至到函数及汇编级别。
 
-Perf基于**事件采样**原理，以**性能事件**为基础，支持针对处理器相关性能指标与操作系统相关性能指标的性能剖析。可用于性能瓶颈的查找与热点代码的定位。
+使用perf，可以分析程序运行期间发生的硬件事件，比如instructions retired、processor clock cycles等；也可以分析**软件时间**，比如page fault和进程切换。
 
-其中 perf 相比 较于其它工具而言，具有特殊的优势。它不仅开源，而且内置于内核源码树。在 如今 upstream kernel 的开发中，perf 是发展较快的领域之一。
 
-perf_events是内核2.6+的一部分，用户空间工具perf在包`linux-tools-common`中，需要安装才能使用。
 
 - 要想从剖析中获得更多内核相关信息，你需要`符号（Symbol）`和`栈追踪`，这可能需要安装额外的包，甚至使用**特定选项重新编译**你的内核。
 - 剖析**用户空间代码**时，也要求目标应用程序的**调试信息（符号表**）被保留。
 
 ## 2.1. 基本原理
+
+
+perf利用Linux的trace特性，可以用于实时跟踪，统计event计数(perf stat)；或者使用采样(perf record)，报告(perf report|script|annotate)的使用方式进行诊断。
+
+perf命令行接口并不能利用所有的Linux trace特性，有些trace需要通过ftrace接口得到。
+
+参考 https://github.com/brendangregg/perf-tools
+
+![2020-07-20-09-42-57.png](./images/2020-07-20-09-42-57.png)
+
+这张图大致列出了perf支持的跟踪事件，从kernerl到user space，支持块设备、网络、CPU、文件系统、内存等，同时还支持系统调用，用户库的事件跟踪。
+
+我们看到perf支持这么多的事件和trace，它依赖了很多的接口来干这件事情。
+
+你可以使用perf list输出当前内核perf 支持的预置events
 
 ### 2.1.1. 三种工作模式
 
@@ -92,7 +111,7 @@ perf_events是内核2.6+的一部分，用户空间工具perf在包`linux-tools-
 
 #### 2.1.1.2. 基于事件的采样
 
-perf_events的采样是基于事件进行的。**采样的周期**以**事件的数量来表示**，而**非基于时间**。当**目标事件计数溢出指定的数值**，则产生一个采样。
+perf的采样是基于事件进行的。**采样的周期**以**事件的数量来表示**，而**非基于时间**。当**目标事件计数溢出指定的数值**，则产生一个采样。
 
 样本中包含的信息取决于用户和工具指定的度量类型，但是最重要的信息是指令指针（instruction pointer），也就是程序被中断时所处的位置。
 
@@ -102,6 +121,10 @@ record子命令默认使用cycle事件，类似于定期采样。
 
 
 # 3. Perf 编译安装
+
+```
+yum install perf
+```
 
 在内核源码包中的位置 tools/perf。
 
@@ -219,19 +242,6 @@ perf top -p $pid
 
 ## 4.2. 工作原理
 
-perf利用Linux的trace特性，可以用于实时跟踪，统计event计数(perf stat)；或者使用采样(perf record)，报告(perf report|script|annotate)的使用方式进行诊断。
-
-perf命令行接口并不能利用所有的Linux trace特性，有些trace需要通过ftrace接口得到。
-
-参考 https://github.com/brendangregg/perf-tools
-
-![2020-07-20-09-42-57.png](./images/2020-07-20-09-42-57.png)
-
-这张图大致列出了perf支持的跟踪事件，从kernerl到user space，支持块设备、网络、CPU、文件系统、内存等，同时还支持系统调用，用户库的事件跟踪。
-
-我们看到perf支持这么多的事件和trace，它依赖了很多的接口来干这件事情。
-
-你可以使用perf list输出当前内核perf 支持的预置events
 
 ### 4.2.1. Symbols
 
