--- Auto-Git Commit ---

--- a/Linux/Debug/debug/tools/perf/1. perf 简介.md
+++ b/Linux/Debug/debug/tools/perf/1. perf 简介.md
@@ -68,27 +68,9 @@
 
 ## 2.1. 基本原理
 
-Perf是一个基于内核的子系统，它提供一个**性能分析框架**，比如**硬件**（`CPU`、`PMU`）功能和**软件**(`软件计数器`、`tracepoint`)功能, 通过perf，应用程序可以利用这几个功能(**PMU**、**tracepoint**和**内核中的计数器**`<软件计数器>`)来进行**性能统计**。由`perf_events`**接口**暴露，并提供 **perf** 这一**用户空间工具**.
+Perf是一个基于内核的子系统，它提供一个**性能分析框架**，它以**性能事件**为基础，基于**对这些事件采样**进行**性能统计**原理，可用于性能瓶颈的查找与热点代码的定位.
 
-Perf基于**事件采样**原理，以**性能事件**为基础，支持针对处理器相关性能指标与操作系统相关性能指标的性能剖析。可用于性能瓶颈的查找与热点代码的定位。
-
-
-它不但可以分析制定应用程序的性能问题（per thread），也可以用来分析内核的性能问题。
-
-总之perf是一款很牛逼的综合性分析工具，大到系统全局性性能，再小到进程线程级别，甚至到函数及汇编级别。
-
-使用perf，可以分析程序运行期间发生的硬件事件，比如instructions retired、processor clock cycles等；也可以分析**软件时间**，比如page fault和进程切换。
-
-
-
-- 要想从剖析中获得更多内核相关信息，你需要`符号（Symbol）`和`栈追踪`，这可能需要安装额外的包，甚至使用**特定选项重新编译**你的内核。
-- 剖析**用户空间代码**时，也要求目标应用程序的**调试信息（符号表**）被保留。
-
-perf利用Linux的trace特性，可以用于实时跟踪，统计event计数(perf stat)；或者使用采样(perf record)，报告(perf report|script|annotate)的使用方式进行诊断。
-
-perf命令行接口并不能利用所有的Linux trace特性，有些trace需要通过ftrace接口得到。
-
-参考 https://github.com/brendangregg/perf-tools
+而Linux有多少性能事件呢??
 
 ![2020-07-20-09-42-57.png](./images/2020-07-20-09-42-57.png)
 
@@ -97,6 +79,29 @@ perf命令行接口并不能利用所有的Linux trace特性，有些trace需要
 我们看到perf支持这么多的事件和trace，它依赖了很多的接口来干这件事情。
 
 你可以使用perf list输出当前内核perf 支持的预置events
+
+Perf比如**硬件**（`CPU`、`PMU`）功能和**软件**(`软件计数器`、`tracepoint`)功能, 通过perf，应用程序可以利用这几个功能(**PMU**、**tracepoint**和**内核中的计数器**`<软件计数器>`)来进行**性能统计**。由`perf_events`**接口**暴露，并提供 **perf** 这一**用户空间工具**.
+
+Perf基于**事件采样**原理，以**性能事件**为基础，支持针对处理器相关性能指标与操作系统相关性能指标的性能剖析。可用于性能瓶颈的查找与热点代码的定位。
+
+
+Perf不但可以分析制定应用程序的性能问题（per thread），也可以用来分析内核的性能问题。
+
+总之perf是一款很牛逼的综合性分析工具，大到系统全局性性能，再小到进程线程级别，甚至到函数及汇编级别。
+
+使用perf，可以分析程序运行期间发生的硬件事件，比如instructions retired、processor clock cycles等；也可以分析**软件事件**，比如page fault和进程切换。
+
+
+
+- 要想从剖析中获得更多**内核相关**信息，你需要`符号（Symbol）`和`栈追踪`，这可能需要安装额外的包，甚至使用**特定选项重新编译**你的内核。
+- 剖析**用户空间代码**时，也要求目标应用程序的**调试信息（符号表**）被保留。
+
+perf利用Linux的trace特性，可以用于实时跟踪，统计event计数(perf stat)；或者使用采样(perf record)，报告(perf report|script|annotate)的使用方式进行诊断。
+
+perf命令行接口并不能利用所有的Linux trace特性，有些trace需要通过ftrace接口得到。
+
+参考 https://github.com/brendangregg/perf-tools
+
 
 ### 2.1.1. 三种工作模式
 
@@ -217,6 +222,8 @@ perf top -p $pid
 ```
 
 该命令利用**默认的性能事件**"cycles"对`[pi]`进行热点分析。"cycles"是**处理器周期事件**。这条命令能够分析出**消耗处理器周期最多的代码**，在处理器频率稳定的前提下，我们可以认为perf给出的热点代码就是消耗时间最多的代码。
+
+CPU周期(cpu-cycles)是默认的性能事件，所谓的CPU周期是指CPU所能识别的最小时间单元，通常为亿分之几秒，是CPU执行最简单的指令时所需要的时间，例如读取寄存器中的内容，也叫做clock tick。
 
 执行上述命令后，Perf会给出如下结果：
 
