--- Auto-Git Commit ---

--- a/Linux/Debug/debug/tools/perf/1. perf 简介.md
+++ b/Linux/Debug/debug/tools/perf/1. perf 简介.md
@@ -25,13 +25,16 @@
   - [5.5. 可视化工具perf timechart](#55-可视化工具perf-timechart)
 - [6. Perf性能事件](#6-perf性能事件)
   - [6.1. 三种类型性能事件](#61-三种类型性能事件)
+    - [硬件性能事件](#硬件性能事件)
+    - [软件性能事件](#软件性能事件)
+    - [Tracingpoint事件](#tracingpoint事件)
     - [6.1.1. 动态追踪](#611-动态追踪)
     - [6.1.2. 事件限定符](#612-事件限定符)
   - [6.2. 性能事件的属性](#62-性能事件的属性)
     - [6.2.1. PMI中断和PEBS中断](#621-pmi中断和pebs中断)
     - [6.2.2. 性能事件的精度级别](#622-性能事件的精度级别)
     - [6.2.3. 其他属性](#623-其他属性)
-  - [6.3. 没有预定义字符描述的性能事件](#63-没有预定义字符描述的性能事件)
+  - [6.3. 没有预定义字符描述的硬件性能事件](#63-没有预定义字符描述的硬件性能事件)
   - [6.4. perf list查看所有性能事件](#64-perf-list查看所有性能事件)
   - [6.5. 性能事件指定错误](#65-性能事件指定错误)
 
@@ -70,15 +73,18 @@
 
 Perf是一个基于内核的子系统，它提供一个**性能分析框架**，它以**性能事件**为基础，基于**对这些事件采样**进行**性能统计**原理，可用于性能瓶颈的查找与热点代码的定位.
 
-而Linux有多少性能事件呢??
+而Linux有多少性能事件呢?? 见下面部分。
 
-![2020-07-20-09-42-57.png](./images/2020-07-20-09-42-57.png)
+perf的采样是**基于事件**进行的。**采样的周期**以**事件的数量来表示**，而**非基于时间**。当**目标事件计数溢出指定的数值！！！**，则**产生一个采样**。
 
-这张图大致列出了perf支持的跟踪事件，从kernerl到user space，支持块设备、网络、CPU、文件系统、内存等，同时还支持系统调用，用户库的事件跟踪。
+样本中包含的信息取决于用户和工具指定的**度量类型**，但是最重要的信息是**指令指针**（instruction pointer），也就是程序**被中断时所处的位置**。
 
-我们看到perf支持这么多的事件和trace，它依赖了很多的接口来干这件事情。
+这种基于中断的采样，在现代处理器上存在刹车效应。也就是说，样本中记录的指针，和程序被中断以处理PMU事件时的指令指针，可能相隔数十个指令。
 
-你可以使用perf list输出当前内核perf 支持的预置events
+record子命令默认使用cycle事件，类似于定期采样。
+
+
+
 
 Perf比如**硬件**（`CPU`、`PMU`）功能和**软件**(`软件计数器`、`tracepoint`)功能, 通过perf，应用程序可以利用这几个功能(**PMU**、**tracepoint**和**内核中的计数器**`<软件计数器>`)来进行**性能统计**。由`perf_events`**接口**暴露，并提供 **perf** 这一**用户空间工具**.
 
@@ -114,13 +120,6 @@ perf命令行接口并不能利用所有的Linux trace特性，有些trace需要
 
 #### 2.1.1.2. 基于事件的采样
 
-perf的采样是基于事件进行的。**采样的周期**以**事件的数量来表示**，而**非基于时间**。当**目标事件计数溢出指定的数值**，则产生一个采样。
-
-样本中包含的信息取决于用户和工具指定的度量类型，但是最重要的信息是指令指针（instruction pointer），也就是程序被中断时所处的位置。
-
-这种基于中断的采样，在现代处理器上存在刹车效应。也就是说，样本中记录的指针，和程序被中断以处理PMU事件时的指令指针，可能相隔数十个指令。
-
-record子命令默认使用cycle事件，类似于定期采样。
 
 
 # 3. Perf 编译安装
@@ -159,8 +158,6 @@ man 1 perf-record
 man 1 perf-report
 man 1 perf-list
 ```
-
-
 
 # 4. 简单示例
 
@@ -336,9 +333,11 @@ perf timechart生成output.svg文档；
 
 # 6. Perf性能事件
 
-完整的性能事件列表见Intel手册`Performance Monitoring Events`
+![2020-07-20-09-42-57.png](./images/2020-07-20-09-42-57.png)
 
+这张图大致列出了perf支持的跟踪事件，从kernerl到user space，支持块设备、网络、CPU、文件系统、内存等，同时还支持系统调用，用户库的事件跟踪。
 
+我们看到perf支持这么多的事件和trace，它**依赖了很多的接口**来干这件事情。
 
 ## 6.1. 三种类型性能事件
 
@@ -346,22 +345,32 @@ perf timechart生成output.svg文档；
 
 因此，必须先利用perf等性能剖析工具查找引发这些性能事件的热点代码以及热点指令。
 
-perf定义的性能事件分为3类，分别是硬件性能事件、软件性能事件与Tracepoint Events。也可以以这三种事件为调优方向：
+perf定义的性能事件分为3类，分别是硬件性能事件、软件性能事件与Tracepoint Events。也可以以这三种事件为调优方向
+
+### 硬件性能事件
 
 - Hardware Event由**PMU部件产生**，在特定的条件下探测性能事件是否发生以及发生的次数。比如cache命中。
 
 来自CPU自己或CPU的PMU（Performance Monitoring Unit，性能监控单元），包含一系列微架构事件例如时钟周期、L1缓存丢失等。具体支持的事件类型取决于CPU型号
 
-- Software Event是**内核产生的事件**，分布在各个功能模块中，统计和**操作系统相关性能事件**。比如进程切换，tick数等。
+完整的性能事件列表见Intel手册`Performance Monitoring Events`
 
-基于**内核计数器**的低级事件，例如CPU迁移、上下文切换、Minor Faults、Major Faults（页面错误）
+### 软件性能事件
+
+- Software Event是**内核产生的事件**，分布在**各个功能模块**中，统计和**操作系统相关性能事件**。比如**进程切换**，等。
+
+基于**内核计数器**的低级事件，例如CPU迁移、**tick数**、上下文切换、Minor Faults、Major Faults（页面错误）
+
+### Tracingpoint事件
 
 - Tracepoint Event是内核中**静态tracepoint所触发的事件**，这些tracepoint用来判断程序运行期间内核的行为细节（这些tracepint的对应的sysfs节点在`/sys/kernel/debug/tracing/events`目录下）。比如slab分配器的分配次数等。
 
 由内核中的ftrace实现，包括：
 1. 内核**追踪点事件**，静态的、内核级的追踪点，**硬编码**到内核
 2. 用户**静态定义追踪**（USDT），**用户态应用程序硬编码**的追踪点
-3. 动态追踪，软件可以被动态instrumented，在任何位置创建事件。对于**内核软件**，使用**kprobes框架**，对于**用户软件**，使用**uprobes**
+3. **动态追踪**，软件可以被动态instrumented，在任何位置创建事件。
+  - 对于**内核软件**，使用**kprobes框架**；
+  - 对于**用户软件**，使用**uprobes**
 4. 定时追踪，以任意频率抓取快照，主要用于CPU剖析，工作机制是定期引发中断
 
 ### 6.1.1. 动态追踪
@@ -420,7 +429,7 @@ G | 在KVM虚拟机中，仅攻击Guest系统触发的性能事件。
 H | 仅统计Host系统触发的性能事件。
 p | 精度级别。
 
-## 6.3. 没有预定义字符描述的性能事件
+## 6.3. 没有预定义字符描述的硬件性能事件
 
 另外需要补充的是，perf list工具仅列出了具有字符描述的**硬件性能事件**。而那些**没有预定义字符描述的性能事件**，也可以通过特殊方式使用。
 
