--- a/Linux/Debug/debug/tools/perf/1. perf 简介.md
+++ b/Linux/Debug/debug/tools/perf/1. perf 简介.md
@@ -7,7 +7,7 @@
 - [2. Perf 简介](#2-perf-简介)
   - [2.1. 基本原理](#21-基本原理)
     - [2.1.1. 三种工作模式](#211-三种工作模式)
-      - [2.1.1.2. 基于事件的采样](#2112-基于事件的采样)
+      - [2.1.1.1. 基于事件的采样](#2111-基于事件的采样)
 - [3. Perf 编译安装](#3-perf-编译安装)
   - [3.1. 测试](#31-测试)
   - [3.2. 编译](#32-编译)
@@ -25,11 +25,11 @@
   - [5.5. 可视化工具perf timechart](#55-可视化工具perf-timechart)
 - [6. Perf性能事件](#6-perf性能事件)
   - [6.1. 三种类型性能事件](#61-三种类型性能事件)
-    - [硬件性能事件](#硬件性能事件)
-    - [软件性能事件](#软件性能事件)
-    - [Tracingpoint事件](#tracingpoint事件)
-    - [6.1.1. 动态追踪](#611-动态追踪)
-    - [6.1.2. 事件限定符](#612-事件限定符)
+    - [6.1.1. 硬件性能事件](#611-硬件性能事件)
+    - [6.1.2. 软件性能事件](#612-软件性能事件)
+    - [6.1.3. Tracingpoint事件](#613-tracingpoint事件)
+    - [6.1.4. 动态追踪](#614-动态追踪)
+    - [6.1.5. 事件限定符](#615-事件限定符)
   - [6.2. 性能事件的属性](#62-性能事件的属性)
     - [6.2.1. PMI中断和PEBS中断](#621-pmi中断和pebs中断)
     - [6.2.2. 性能事件的精度级别](#622-性能事件的精度级别)
@@ -71,43 +71,18 @@
 
 ## 2.1. 基本原理
 
-Perf是一个基于内核的子系统，它提供一个**性能分析框架**，它以**性能事件**为基础，基于**对这些事件采样**进行**性能统计**原理，可用于性能瓶颈的查找与热点代码的定位.
-
-而Linux有多少性能事件呢?? 见下面部分。
+Perf是一个基于内核的子系统，它提供一个**性能分析框架**，它以**性能事件**为基础，基于**对这些事件！！！采样！！！** 进行**性能统计**原理，可用于性能瓶颈的查找与热点代码的定位.
 
 perf的采样是**基于事件**进行的。**采样的周期**以**事件的数量来表示**，而**非基于时间**。当**目标事件计数溢出指定的数值！！！**，则**产生一个采样**。
 
-样本中包含的信息取决于用户和工具指定的**度量类型**，但是最重要的信息是**指令指针**（instruction pointer），也就是程序**被中断时所处的位置**。
-
-这种基于中断的采样，在现代处理器上存在刹车效应。也就是说，样本中记录的指针，和程序被中断以处理PMU事件时的指令指针，可能相隔数十个指令。
-
-record子命令默认使用cycle事件，类似于定期采样。
-
-
-
-
-Perf比如**硬件**（`CPU`、`PMU`）功能和**软件**(`软件计数器`、`tracepoint`)功能, 通过perf，应用程序可以利用这几个功能(**PMU**、**tracepoint**和**内核中的计数器**`<软件计数器>`)来进行**性能统计**。由`perf_events`**接口**暴露，并提供 **perf** 这一**用户空间工具**.
-
-Perf基于**事件采样**原理，以**性能事件**为基础，支持针对处理器相关性能指标与操作系统相关性能指标的性能剖析。可用于性能瓶颈的查找与热点代码的定位。
-
-
 Perf不但可以分析制定应用程序的性能问题（per thread），也可以用来分析内核的性能问题。
-
-总之perf是一款很牛逼的综合性分析工具，大到系统全局性性能，再小到进程线程级别，甚至到函数及汇编级别。
-
-使用perf，可以分析程序运行期间发生的硬件事件，比如instructions retired、processor clock cycles等；也可以分析**软件事件**，比如page fault和进程切换。
-
-
 
 - 要想从剖析中获得更多**内核相关**信息，你需要`符号（Symbol）`和`栈追踪`，这可能需要安装额外的包，甚至使用**特定选项重新编译**你的内核。
 - 剖析**用户空间代码**时，也要求目标应用程序的**调试信息（符号表**）被保留。
 
-perf利用Linux的trace特性，可以用于实时跟踪，统计event计数(perf stat)；或者使用采样(perf record)，报告(perf report|script|annotate)的使用方式进行诊断。
+总之perf是一款很牛逼的综合性分析工具，大到系统全局性性能，再小到进程线程级别，甚至到函数及汇编级别。
 
-perf命令行接口并不能利用所有的Linux trace特性，有些trace需要通过ftrace接口得到。
-
-参考 https://github.com/brendangregg/perf-tools
-
+而Linux有多少性能事件呢?? 见下面部分。
 
 ### 2.1.1. 三种工作模式
 
@@ -118,7 +93,7 @@ perf命令行接口并不能利用所有的Linux trace特性，有些trace需要
 * bpf，4.4版本内核引入的新特性，允许在**内核**中执行一段**用户自定义的代码**，以执行高效的过滤、汇总
 
 
-#### 2.1.1.2. 基于事件的采样
+#### 2.1.1.1. 基于事件的采样
 
 
 
@@ -255,6 +230,12 @@ https://developer.aliyun.com/article/65255
 
 # 5. Perf 功能概述
 
+perf利用Linux的trace特性，可以用于实时跟踪，统计event计数(perf stat)；或者使用采样(perf record)，报告(perf report|script|annotate)的使用方式进行诊断。
+
+perf命令行接口并不能利用所有的Linux trace特性，有些trace需要通过ftrace接口得到。
+
+参考 https://github.com/brendangregg/perf-tools
+
 perf 命令用法还是挺简单的，根据功能区分了COMMAND，每个COMMAND有各自的用法。
 
 ![2020-07-20-08-26-42.png](./images/2020-07-20-08-26-42.png)
@@ -341,13 +322,20 @@ perf timechart生成output.svg文档；
 
 ## 6.1. 三种类型性能事件
 
-利用perf剖析程序性能时，需要指定**当前测试**的**性能事件**。性能事件是指在**处理器**或**操作系统**中发生的，可能影响到程序性能的硬件事件或软件事件。比如Cache丢失，流水线停顿，页面交换等。这些事件会对程序的执行时间造成较大的负面影响。在优化代码时，应尽可能减少此类事件发生。
+利用perf剖析程序性能时，需要指定**当前测试**的**性能事件**。性能事件是指在**处理器**或**操作系统**中发生的，**可能影响到程序性能**的硬件事件或软件事件。比如Cache丢失，流水线停顿，页面交换等。这些事件会对程序的执行时间造成较大的负面影响。在优化代码时，应尽可能减少此类事件发生。
 
 因此，必须先利用perf等性能剖析工具查找引发这些性能事件的热点代码以及热点指令。
 
 perf定义的性能事件分为3类，分别是硬件性能事件、软件性能事件与Tracepoint Events。也可以以这三种事件为调优方向
 
-### 硬件性能事件
+
+使用perf，可以分析程序运行期间发生的硬件事件，比如instructions retired、processor clock cycles等；也可以分析**软件事件**，比如page fault和进程切换。
+
+perf利用Linux的trace特性，可以用于实时跟踪，统计event计数(perf stat)；或者使用采样(perf record)，报告(perf report|script|annotate)的使用方式进行诊断。
+
+perf命令行接口并不能利用所有的Linux trace特性，有些trace需要通过ftrace接口得到。
+
+### 6.1.1. 硬件性能事件
 
 - Hardware Event由**PMU部件产生**，在特定的条件下探测性能事件是否发生以及发生的次数。比如cache命中。
 
@@ -355,13 +343,13 @@ perf定义的性能事件分为3类，分别是硬件性能事件、软件性能
 
 完整的性能事件列表见Intel手册`Performance Monitoring Events`
 
-### 软件性能事件
+### 6.1.2. 软件性能事件
 
-- Software Event是**内核产生的事件**，分布在**各个功能模块**中，统计和**操作系统相关性能事件**。比如**进程切换**，等。
+- Software Event是**内核产生的事件/计数器**，分布在**各个功能模块**中，统计和**操作系统相关性能事件**。比如**进程切换**，等。
 
 基于**内核计数器**的低级事件，例如CPU迁移、**tick数**、上下文切换、Minor Faults、Major Faults（页面错误）
 
-### Tracingpoint事件
+### 6.1.3. Tracingpoint事件
 
 - Tracepoint Event是内核中**静态tracepoint所触发的事件**，这些tracepoint用来判断程序运行期间内核的行为细节（这些tracepint的对应的sysfs节点在`/sys/kernel/debug/tracing/events`目录下）。比如slab分配器的分配次数等。
 
@@ -373,13 +361,13 @@ perf定义的性能事件分为3类，分别是硬件性能事件、软件性能
   - 对于**用户软件**，使用**uprobes**
 4. 定时追踪，以任意频率抓取快照，主要用于CPU剖析，工作机制是定期引发中断
 
-### 6.1.1. 动态追踪
+### 6.1.4. 动态追踪
 
 要启用内核动态追踪，需要使用内核编译参数`CONFIG_KPROBES=y`、`CONFIG_KPROBE_EVENTS=y`。要追踪基于帧指针的内核栈，需要内核编译参数`CONFIG_FRAME_POINTER=y`。
 
 要启用**用户动态追踪**，需要使用内核编译参数`CONFIG_UPROBES=y`、`CONFIG_UPROBE_EVENTS=y`
 
-### 6.1.2. 事件限定符
+### 6.1.5. 事件限定符
 
 事件有多种表示方式，最简单的是它的字符串表示。引用事件时，可以指定限定符：
 
@@ -402,6 +390,19 @@ https://blog.gmem.cc/perf
 ```
 perf top -e cycles:pp
 ```
+
+
+
+perf的采样是**基于事件**进行的。**采样的周期**以**事件的数量来表示**，而**非基于时间**。当**目标事件计数溢出指定的数值！！！**，则**产生一个采样**。
+
+样本中包含的信息取决于用户和工具指定的**度量类型**，但是最重要的信息是**指令指针**（instruction pointer），也就是程序**被中断时所处的位置**。
+
+这种基于中断的采样，在现代处理器上存在刹车效应。也就是说，**样本中记录的指针**，和程序被中断以处理PMU事件时的指令指针，可能**相隔数十个指令**。
+
+record子命令默认使用cycle事件，类似于定期采样。
+
+
+
 
 ### 6.2.2. 性能事件的精度级别
 
