--- Auto-Git Commit ---

--- a/Linux/Debug/debug/tools/perf/1. perf 简介.md
+++ b/Linux/Debug/debug/tools/perf/1. perf 简介.md
@@ -7,36 +7,34 @@
 - [2. Perf 简介](#2-perf-简介)
   - [2.1. 基本原理](#21-基本原理)
     - [2.1.1. 三种工作模式](#211-三种工作模式)
-      - [2.1.1.1. 基于事件的采样](#2111-基于事件的采样)
-- [3. Perf 编译安装](#3-perf-编译安装)
+- [3. Perf 安装](#3-perf-安装)
   - [3.1. 测试](#31-测试)
   - [3.2. 编译](#32-编译)
   - [3.3. 安装](#33-安装)
   - [3.4. 帮助文档](#34-帮助文档)
-- [4. 简单示例](#4-简单示例)
-  - [4.1. cycles原理](#41-cycles原理)
-  - [4.2. 工作原理](#42-工作原理)
-    - [4.2.1. Symbols](#421-symbols)
+- [4. Perf性能事件](#4-perf性能事件)
+  - [4.1. 三种类型性能事件](#41-三种类型性能事件)
+    - [4.1.1. 硬件性能事件](#411-硬件性能事件)
+    - [4.1.2. 软件性能事件](#412-软件性能事件)
+    - [4.1.3. Tracingpoint事件](#413-tracingpoint事件)
+    - [4.1.4. 动态追踪](#414-动态追踪)
+    - [4.1.5. 事件限定符](#415-事件限定符)
+  - [4.2. 性能事件的属性](#42-性能事件的属性)
+    - [4.2.1. PMI中断和PEBS中断](#421-pmi中断和pebs中断)
+    - [4.2.2. 性能事件的精度级别](#422-性能事件的精度级别)
+    - [4.2.3. 其他属性](#423-其他属性)
+  - [4.3. 没有预定义字符描述的硬件性能事件](#43-没有预定义字符描述的硬件性能事件)
+  - [4.4. perf list查看所有性能事件](#44-perf-list查看所有性能事件)
+  - [4.5. 性能事件指定错误](#45-性能事件指定错误)
 - [5. Perf 功能概述](#5-perf-功能概述)
   - [5.1. 全局性概况](#51-全局性概况)
   - [5.2. 全局细节](#52-全局细节)
   - [5.3. 特定功能分析](#53-特定功能分析)
   - [5.4. perf record](#54-perf-record)
   - [5.5. 可视化工具perf timechart](#55-可视化工具perf-timechart)
-- [6. Perf性能事件](#6-perf性能事件)
-  - [6.1. 三种类型性能事件](#61-三种类型性能事件)
-    - [6.1.1. 硬件性能事件](#611-硬件性能事件)
-    - [6.1.2. 软件性能事件](#612-软件性能事件)
-    - [6.1.3. Tracingpoint事件](#613-tracingpoint事件)
-    - [6.1.4. 动态追踪](#614-动态追踪)
-    - [6.1.5. 事件限定符](#615-事件限定符)
-  - [6.2. 性能事件的属性](#62-性能事件的属性)
-    - [6.2.1. PMI中断和PEBS中断](#621-pmi中断和pebs中断)
-    - [6.2.2. 性能事件的精度级别](#622-性能事件的精度级别)
-    - [6.2.3. 其他属性](#623-其他属性)
-  - [6.3. 没有预定义字符描述的硬件性能事件](#63-没有预定义字符描述的硬件性能事件)
-  - [6.4. perf list查看所有性能事件](#64-perf-list查看所有性能事件)
-  - [6.5. 性能事件指定错误](#65-性能事件指定错误)
+- [6. 简单示例](#6-简单示例)
+  - [6.1. cycles原理](#61-cycles原理)
+    - [6.1.1. Symbols](#611-symbols)
 
 <!-- /code_chunk_output -->
 
@@ -86,18 +84,21 @@ Perf不但可以分析制定应用程序的性能问题（per thread），也可
 
 ### 2.1.1. 三种工作模式
 
-有三种工作模式：
+Brendan D. Gregg 收集和写了很多命令, 按从小到大开销进行划分, 分为三种:
+
+* statistics/count: increment an integer counter on events
+* sample: collect details (eg, instruction pointer or stack) from a subset of events (once every ...)
+* trace: collect details from every event
 
 * counting，在**内核上下文**对**各种指标**进行计数
 * sampling，**对事件events进行采样**，并将性能数据存放到**内核缓冲**，然后异步的写入到perf.data
 * bpf，4.4版本内核引入的新特性，允许在**内核**中执行一段**用户自定义的代码**，以执行高效的过滤、汇总
 
 
-#### 2.1.1.1. 基于事件的采样
 
 
 
-# 3. Perf 编译安装
+# 3. Perf 安装
 
 ```
 yum install perf
@@ -134,99 +135,193 @@ man 1 perf-report
 man 1 perf-list
 ```
 
-# 4. 简单示例
+# 4. Perf性能事件
 
-我们先通过一个例子来看看perf究竟能干什么。程序`[pi.c]`是一个简单的计算Pi的CPU密集型程序。很显然，`[pi.c]`的热点在函数`do_pi()`中。
+![2020-07-20-09-42-57.png](./images/2020-07-20-09-42-57.png)
 
-```cpp
-#include <stdio.h>
-#include <math.h>
-#include <sys/types.h>
-#include <linux/unistd.h>
+这张图大致列出了perf支持的跟踪事件，从kernerl到user space，支持块设备、网络、CPU、文件系统、内存等，同时还支持系统调用，用户库的事件跟踪。
 
-int do_pi(double *pi)
-{
-    double h, sum, x;
-    long long n, i;
+我们看到perf支持这么多的事件和trace，它**依赖了很多的接口**来干这件事情。
 
-    n = 5000000;
-    h = 1.0/n;
-    sum = 0.0;
+## 4.1. 三种类型性能事件
 
-    for (i = 1; i <= n; i++) {
-        x = h * (i - 0.5);
-        sum += 4.0 / (1.0 + pow(x,2));
-    }
+利用perf剖析程序性能时，需要指定**当前测试**的**性能事件**。性能事件是指在**处理器**或**操作系统**中发生的，**可能影响到程序性能**的硬件事件或软件事件。比如Cache丢失，流水线停顿，页面交换等。这些事件会对程序的执行时间造成较大的负面影响。在优化代码时，应尽可能减少此类事件发生。
 
-    *pi = h *sum;
-    return 0;
-}
+因此，必须先利用perf等性能剖析工具查找引发这些性能事件的热点代码以及热点指令。
 
-int main(void)
-{
-    double pi;
+perf定义的性能事件分为3类，分别是硬件性能事件、软件性能事件与Tracepoint Events。也可以以这三种事件为调优方向
 
-    printf("pid: %d\n", getpid());
-    sleep(5);
 
-    if (!do_pi(&pi)) {
-        printf("PI is %f\n", pi);
-    }
-    return 0;
-}
+使用perf，可以分析程序运行期间发生的硬件事件，比如instructions retired、processor clock cycles等；也可以分析**软件事件**，比如page fault和进程切换。
+
+perf利用Linux的trace特性，可以用于实时跟踪，统计event计数(perf stat)；或者使用采样(perf record)，报告(perf report|script|annotate)的使用方式进行诊断。
+
+perf命令行接口并不能利用所有的Linux trace特性，有些trace需要通过ftrace接口得到。
+
+### 4.1.1. 硬件性能事件
+
+- Hardware Event由**PMU部件产生**，在特定的条件下探测性能事件是否发生以及发生的次数。比如cache命中。
+
+来自CPU自己或CPU的PMU（Performance Monitoring Unit，性能监控单元），包含一系列微架构事件例如时钟周期、L1缓存丢失等。具体支持的事件类型取决于CPU型号
+
+完整的性能事件列表见Intel手册`Performance Monitoring Events`
+
+### 4.1.2. 软件性能事件
+
+- Software Event是**内核产生的事件/计数器**，分布在**各个功能模块**中，统计和**操作系统相关性能事件**。比如**进程切换**，等。
+
+基于**内核计数器**的低级事件，例如CPU迁移、**tick数**、上下文切换、Minor Faults、Major Faults（页面错误）
+
+### 4.1.3. Tracingpoint事件
+
+- Tracepoint Event是内核中**静态tracepoint所触发的事件**，这些tracepoint用来判断程序运行期间内核的行为细节（这些tracepint的对应的sysfs节点在`/sys/kernel/debug/tracing/events`目录下）。比如slab分配器的分配次数等。
+
+由内核中的ftrace实现，包括：
+1. 内核**追踪点事件**，静态的、内核级的追踪点，**硬编码**到内核
+2. 用户**静态定义追踪**（USDT），**用户态应用程序硬编码**的追踪点
+3. **动态追踪**，软件可以被动态instrumented，在任何位置创建事件。
+  - 对于**内核软件**，使用**kprobes框架**；
+  - 对于**用户软件**，使用**uprobes**
+4. 定时追踪，以任意频率抓取快照，主要用于CPU剖析，工作机制是定期引发中断
+
+### 4.1.4. 动态追踪
+
+要启用内核动态追踪，需要使用内核编译参数`CONFIG_KPROBES=y`、`CONFIG_KPROBE_EVENTS=y`。要追踪基于帧指针的内核栈，需要内核编译参数`CONFIG_FRAME_POINTER=y`。
+
+要启用**用户动态追踪**，需要使用内核编译参数`CONFIG_UPROBES=y`、`CONFIG_UPROBE_EVENTS=y`
+
+### 4.1.5. 事件限定符
+
+事件有多种表示方式，最简单的是它的字符串表示。引用事件时，可以指定限定符：
+
+https://blog.gmem.cc/perf
+
+## 4.2. 性能事件的属性
+
+### 4.2.1. PMI中断和PEBS中断
+
+**硬件性能事件**由处理器的PMU提供支持。
+
+如前文所述，perf会对PMI中断发生时的PC寄存器进行采样。由于现代处理器的主频非常高，在加上深度流水线机制，从**性能事件被触发**，到处理器**响应PMI中断**，流水线上可能已处理过百条指令。那么**PMI中断**采到的**指令地址**就不再是处罚性能事件的那条指令的地址了，而可能具有**非常严重的偏差**。
+
+为了解决这个问题，intel处理器通过**PEBS**（Precise Event Based Sampling）机制实现了**高精度事件采样**。PEBS通过硬件在**计数器溢出**时将处理器现场直接保存到内存（而**不是在相应中断时**才保存寄存器现场），从而使得perf能够真正触发性能事件的那条指令的地址，提高了采样精度。
+
+在默认条件下，perf**不使用PEBS机制**。用户如果想要使用**高精度采样**，需要在指定性能事件时，在事件后调价后缀"`:p`"或"`:pp`"。
+
+例如：
+
 ```
-编译pi程序
-
-```
-gcc pi.c -lm -o pi
+perf top -e cycles:pp
 ```
 
-运行pi程序
+
+
+perf的采样是**基于事件**进行的。**采样的周期**以**事件的数量来表示**，而**非基于时间**。当**目标事件计数溢出指定的数值！！！**，则**产生一个采样**。
+
+样本中包含的信息取决于用户和工具指定的**度量类型**，但是最重要的信息是**指令指针**（instruction pointer），也就是程序**被中断时所处的位置**。
+
+这种基于中断的采样，在现代处理器上存在刹车效应。也就是说，**样本中记录的指针**，和程序被中断以处理PMU事件时的指令指针，可能**相隔数十个指令**。
+
+record子命令默认使用cycle事件，类似于定期采样。
+
+
+
+
+### 4.2.2. 性能事件的精度级别
+
+Perf 在采样精度上定义了 4 个级别.
+
+Level | Comment
+---|---
+0 | 无精度保证
+1 | 采样指令与触发性能事件的指令之间的偏差为常数（:p）
+2 | 需要尽量保证采样指令与触发性能事件的指令的偏差为0（:pp）
+3 | 保证采样指令与触发性能事件的指令之间的偏差**必须为0**（:ppp）
+
+目前X86处理器，包括Intel处理器与AMD处理器Jun仅能实现前3个精度级别。
+
+### 4.2.3. 其他属性
+
+除了精度级别以外，事件还具有其他几个属性，均可以通过"event:X"的方式予以指定。
+
+attribute | Comment
+---|---
+u | 仅统计用户空间程序触发的性能事件。
+k | 仅统计内核触发的性能事件。
+h | 仅统计Hypervisor触发的性能事件。
+G | 在KVM虚拟机中，仅攻击Guest系统触发的性能事件。
+H | 仅统计Host系统触发的性能事件。
+p | 精度级别。
+
+## 4.3. 没有预定义字符描述的硬件性能事件
+
+另外需要补充的是，perf list工具仅列出了具有字符描述的**硬件性能事件**。而那些**没有预定义字符描述的性能事件**，也可以通过特殊方式使用。
+
+这时，就需要我们**根据CPU的手册**，通过性能事件的标号配置PMU的性能计数器。可以采用如下方式：
 
 ```
-./pi
+perf top -e r[UMask+EventSelect]
 ```
 
-根据程序显示的pid在命令行中执行
+举个例子，我们现在想统计所有**从内存中读过数据的指令的个数**，perf list中并未预定义此事件的字符描述。通过查找intel的处理器手册，我们找了此事件编码：
+
+![2020-07-20-08-47-26.png](./images/2020-07-20-08-47-26.png)
+
+便可以通过以下方式使用此事件：
 
 ```
-perf top -p $pid
+perf stat -e r010b ls
 ```
 
-该命令利用**默认的性能事件**"cycles"对`[pi]`进行热点分析。"cycles"是**处理器周期事件**。这条命令能够分析出**消耗处理器周期最多的代码**，在处理器频率稳定的前提下，我们可以认为perf给出的热点代码就是消耗时间最多的代码。
-
-CPU周期(cpu-cycles)是默认的性能事件，所谓的CPU周期是指CPU所能识别的最小时间单元，通常为亿分之几秒，是CPU执行最简单的指令时所需要的时间，例如读取寄存器中的内容，也叫做clock tick。
-
-执行上述命令后，Perf会给出如下结果：
-
-![image](./images/0x01.png)
-
-从上图可以看到，在`[pi]`程序执行期间，函数`do_pi()`消耗了62.57%的CPU周期，是消耗处理器周期最多的热点代码。这跟我们预想的一样。
-
-## 4.1. cycles原理
-
-那么Perf是怎么做到的呢？以`cycles`性能事件为例
-
-首先，perf会通过系统调用`sys_perf_event_open`在内核中注册一个检测"**cycles**"**事件**的性能计数器。内核根据perf提供的信息在**PMU**上初始化一个**硬件性能计数器**（PMC：Performance Monitoring Counter）。PMC随着CPU周期的增加而自动累加。
-
-在**PMU溢出**时，PMU触发一个PMI（Performance Monitoring Interrupt）中断。内核在PMI中断处理函数中保存**PMC的计数值**，触发中断时的**指令地址**（Register IP：Instruction Pointer），**当前时间戳**以及**当前进程**的**PID**，**TID**，**comm**等信息。我们把这些信息统称为一个**采样**（sample）。
-
-内核会将收集到的sample放入用于跟**用户空间**通信的Ring Buffer。**用于空间**的perf分析程序采用**mmap机制**从ring buffer中读入采样，并对其解析。perf根据**pid**, comm等信息可以找到对应的进程。根据**IP**与**ELF文件**中的**符号表**可以查找到触发PMI中断的指令所在的函数。为了能够使perf读到函数名，我们的目标程序必须具备符号表。
-
-如果perf在分析结果中**只看到一串地址**，而**没有对应的函数名**时，通常是由于在**编译时**利用**strip**删除了ELF文件中的符号信息。建议在性能剖析阶段，保留程序中的**sysbol table**与**debug info**等信息。
-
-根据上述的perf采样原理可以得知，perf假设两次采样之间，即两次相邻的PMI中断之间系统执行的是同一个进程的同一个函数。这种假设会带来**一定的误差**，当感觉perf给出的**结果不准**时，不妨提高**采样频率**，perf会给出更加精确的结果。
-
-## 4.2. 工作原理
+所以完整的性能事件列表见Intel手册`Performance Monitoring Events`
 
 
-### 4.2.1. Symbols
+## 4.4. perf list查看所有性能事件
 
-没有符号表，无法将内存地址翻译成函数和变量名。
+不同型号的 CPU 支持的硬件性能事件不尽相同。不同版本的内核提供的软件 性能事件与 Tracepoint events 也不尽相同。因此，perf提供了list工具以查看当前软硬件平台支持的性能事件列表。
 
-例如，无符号表的跟踪显示如下
+使用方法如下：
 
-https://developer.aliyun.com/article/65255
+```
+# ./perf list -h
+
+ Usage: perf list [<options>] [hw|sw|cache|tracepoint|pmu|sdt|event_glob]
+
+    -d, --desc            Print extra event descriptions. --no-desc to not print.
+    -v, --long-desc       Print longer event descriptions.
+        --debug           Enable debugging output
+        --deprecated      Print deprecated events.
+        --details         Print information on the perf event names and expressions used internally by events.
+```
+
+执行命令后，perf将给出当前软硬件平台的所有性能事件。输出结果如下图所示。每行后面括弧里的信息表示该事件是**硬件事件**、**软件事件**还是Tracepoint events。
+
+![2020-07-19-21-04-27.png](./images/2020-07-19-21-04-27.png)
+
+......
+
+![2020-07-19-21-06-38.png](./images/2020-07-19-21-06-38.png)
+
+## 4.5. 性能事件指定错误
+
+所以如果指定性能事件失败, 可能会有类似打印
+
+```
+./perf record -e syscalls:sys_enter ls
+event syntax error: 'syscalls:sys_enter'
+                     \___ unknown tracepoint
+
+Error:	File /sys/kernel/debug/tracing/events/syscalls/sys_enter not found.
+Hint:	Perhaps this kernel misses some CONFIG_ setting to enable this feature?.
+
+Run 'perf list' for a list of valid events
+
+ Usage: perf record [<options>] [<command>]
+    or: perf record [<options>] -- <command> [<options>]
+
+    -e, --event <event>   event selector. use 'perf list' to list available events
+```
+
 
 # 5. Perf 功能概述
 
@@ -312,189 +407,94 @@ perf trace记录系统调用轨迹；
 perf timechart record记录事件；
 perf timechart生成output.svg文档；
 
-# 6. Perf性能事件
 
-![2020-07-20-09-42-57.png](./images/2020-07-20-09-42-57.png)
+# 6. 简单示例
 
-这张图大致列出了perf支持的跟踪事件，从kernerl到user space，支持块设备、网络、CPU、文件系统、内存等，同时还支持系统调用，用户库的事件跟踪。
+我们先通过一个例子来看看perf究竟能干什么。程序`[pi.c]`是一个简单的计算Pi的CPU密集型程序。很显然，`[pi.c]`的热点在函数`do_pi()`中。
 
-我们看到perf支持这么多的事件和trace，它**依赖了很多的接口**来干这件事情。
+```cpp
+#include <stdio.h>
+#include <math.h>
+#include <sys/types.h>
+#include <linux/unistd.h>
 
-## 6.1. 三种类型性能事件
+int do_pi(double *pi)
+{
+    double h, sum, x;
+    long long n, i;
 
-利用perf剖析程序性能时，需要指定**当前测试**的**性能事件**。性能事件是指在**处理器**或**操作系统**中发生的，**可能影响到程序性能**的硬件事件或软件事件。比如Cache丢失，流水线停顿，页面交换等。这些事件会对程序的执行时间造成较大的负面影响。在优化代码时，应尽可能减少此类事件发生。
+    n = 5000000;
+    h = 1.0/n;
+    sum = 0.0;
 
-因此，必须先利用perf等性能剖析工具查找引发这些性能事件的热点代码以及热点指令。
+    for (i = 1; i <= n; i++) {
+        x = h * (i - 0.5);
+        sum += 4.0 / (1.0 + pow(x,2));
+    }
 
-perf定义的性能事件分为3类，分别是硬件性能事件、软件性能事件与Tracepoint Events。也可以以这三种事件为调优方向
+    *pi = h *sum;
+    return 0;
+}
 
+int main(void)
+{
+    double pi;
 
-使用perf，可以分析程序运行期间发生的硬件事件，比如instructions retired、processor clock cycles等；也可以分析**软件事件**，比如page fault和进程切换。
+    printf("pid: %d\n", getpid());
+    sleep(5);
 
-perf利用Linux的trace特性，可以用于实时跟踪，统计event计数(perf stat)；或者使用采样(perf record)，报告(perf report|script|annotate)的使用方式进行诊断。
-
-perf命令行接口并不能利用所有的Linux trace特性，有些trace需要通过ftrace接口得到。
-
-### 6.1.1. 硬件性能事件
-
-- Hardware Event由**PMU部件产生**，在特定的条件下探测性能事件是否发生以及发生的次数。比如cache命中。
-
-来自CPU自己或CPU的PMU（Performance Monitoring Unit，性能监控单元），包含一系列微架构事件例如时钟周期、L1缓存丢失等。具体支持的事件类型取决于CPU型号
-
-完整的性能事件列表见Intel手册`Performance Monitoring Events`
-
-### 6.1.2. 软件性能事件
-
-- Software Event是**内核产生的事件/计数器**，分布在**各个功能模块**中，统计和**操作系统相关性能事件**。比如**进程切换**，等。
-
-基于**内核计数器**的低级事件，例如CPU迁移、**tick数**、上下文切换、Minor Faults、Major Faults（页面错误）
-
-### 6.1.3. Tracingpoint事件
-
-- Tracepoint Event是内核中**静态tracepoint所触发的事件**，这些tracepoint用来判断程序运行期间内核的行为细节（这些tracepint的对应的sysfs节点在`/sys/kernel/debug/tracing/events`目录下）。比如slab分配器的分配次数等。
-
-由内核中的ftrace实现，包括：
-1. 内核**追踪点事件**，静态的、内核级的追踪点，**硬编码**到内核
-2. 用户**静态定义追踪**（USDT），**用户态应用程序硬编码**的追踪点
-3. **动态追踪**，软件可以被动态instrumented，在任何位置创建事件。
-  - 对于**内核软件**，使用**kprobes框架**；
-  - 对于**用户软件**，使用**uprobes**
-4. 定时追踪，以任意频率抓取快照，主要用于CPU剖析，工作机制是定期引发中断
-
-### 6.1.4. 动态追踪
-
-要启用内核动态追踪，需要使用内核编译参数`CONFIG_KPROBES=y`、`CONFIG_KPROBE_EVENTS=y`。要追踪基于帧指针的内核栈，需要内核编译参数`CONFIG_FRAME_POINTER=y`。
-
-要启用**用户动态追踪**，需要使用内核编译参数`CONFIG_UPROBES=y`、`CONFIG_UPROBE_EVENTS=y`
-
-### 6.1.5. 事件限定符
-
-事件有多种表示方式，最简单的是它的字符串表示。引用事件时，可以指定限定符：
-
-https://blog.gmem.cc/perf
-
-## 6.2. 性能事件的属性
-
-### 6.2.1. PMI中断和PEBS中断
-
-**硬件性能事件**由处理器的PMU提供支持。
-
-如前文所述，perf会对PMI中断发生时的PC寄存器进行采样。由于现代处理器的主频非常高，在加上深度流水线机制，从**性能事件被触发**，到处理器**响应PMI中断**，流水线上可能已处理过百条指令。那么**PMI中断**采到的**指令地址**就不再是处罚性能事件的那条指令的地址了，而可能具有**非常严重的偏差**。
-
-为了解决这个问题，intel处理器通过**PEBS**（Precise Event Based Sampling）机制实现了**高精度事件采样**。PEBS通过硬件在**计数器溢出**时将处理器现场直接保存到内存（而**不是在相应中断时**才保存寄存器现场），从而使得perf能够真正触发性能事件的那条指令的地址，提高了采样精度。
-
-在默认条件下，perf**不使用PEBS机制**。用户如果想要使用**高精度采样**，需要在指定性能事件时，在事件后调价后缀"`:p`"或"`:pp`"。
-
-例如：
+    if (!do_pi(&pi)) {
+        printf("PI is %f\n", pi);
+    }
+    return 0;
+}
+```
+编译pi程序
 
 ```
-perf top -e cycles:pp
+gcc pi.c -lm -o pi
 ```
 
-
-
-perf的采样是**基于事件**进行的。**采样的周期**以**事件的数量来表示**，而**非基于时间**。当**目标事件计数溢出指定的数值！！！**，则**产生一个采样**。
-
-样本中包含的信息取决于用户和工具指定的**度量类型**，但是最重要的信息是**指令指针**（instruction pointer），也就是程序**被中断时所处的位置**。
-
-这种基于中断的采样，在现代处理器上存在刹车效应。也就是说，**样本中记录的指针**，和程序被中断以处理PMU事件时的指令指针，可能**相隔数十个指令**。
-
-record子命令默认使用cycle事件，类似于定期采样。
-
-
-
-
-### 6.2.2. 性能事件的精度级别
-
-Perf 在采样精度上定义了 4 个级别.
-
-Level | Comment
----|---
-0 | 无精度保证
-1 | 采样指令与触发性能事件的指令之间的偏差为常数（:p）
-2 | 需要尽量保证采样指令与触发性能事件的指令的偏差为0（:pp）
-3 | 保证采样指令与触发性能事件的指令之间的偏差**必须为0**（:ppp）
-
-目前X86处理器，包括Intel处理器与AMD处理器Jun仅能实现前3个精度级别。
-
-### 6.2.3. 其他属性
-
-除了精度级别以外，事件还具有其他几个属性，均可以通过"event:X"的方式予以指定。
-
-attribute | Comment
----|---
-u | 仅统计用户空间程序触发的性能事件。
-k | 仅统计内核触发的性能事件。
-h | 仅统计Hypervisor触发的性能事件。
-G | 在KVM虚拟机中，仅攻击Guest系统触发的性能事件。
-H | 仅统计Host系统触发的性能事件。
-p | 精度级别。
-
-## 6.3. 没有预定义字符描述的硬件性能事件
-
-另外需要补充的是，perf list工具仅列出了具有字符描述的**硬件性能事件**。而那些**没有预定义字符描述的性能事件**，也可以通过特殊方式使用。
-
-这时，就需要我们**根据CPU的手册**，通过性能事件的标号配置PMU的性能计数器。可以采用如下方式：
+运行pi程序
 
 ```
-perf top -e r[UMask+EventSelect]
+./pi
 ```
 
-举个例子，我们现在想统计所有**从内存中读过数据的指令的个数**，perf list中并未预定义此事件的字符描述。通过查找intel的处理器手册，我们找了此事件编码：
-
-![2020-07-20-08-47-26.png](./images/2020-07-20-08-47-26.png)
-
-便可以通过以下方式使用此事件：
+根据程序显示的pid在命令行中执行
 
 ```
-perf stat -e r010b ls
+perf top -p $pid
 ```
 
-所以完整的性能事件列表见Intel手册`Performance Monitoring Events`
+该命令利用**默认的性能事件**"cycles"对`[pi]`进行热点分析。"cycles"是**处理器周期事件**。这条命令能够分析出**消耗处理器周期最多的代码**，在处理器频率稳定的前提下，我们可以认为perf给出的热点代码就是消耗时间最多的代码。
 
+CPU周期(cpu-cycles)是默认的性能事件，所谓的CPU周期是指CPU所能识别的最小时间单元，通常为亿分之几秒，是CPU执行最简单的指令时所需要的时间，例如读取寄存器中的内容，也叫做clock tick。
 
-## 6.4. perf list查看所有性能事件
+执行上述命令后，Perf会给出如下结果：
 
-不同型号的 CPU 支持的硬件性能事件不尽相同。不同版本的内核提供的软件 性能事件与 Tracepoint events 也不尽相同。因此，perf提供了list工具以查看当前软硬件平台支持的性能事件列表。
+![image](./images/0x01.png)
 
-使用方法如下：
+从上图可以看到，在`[pi]`程序执行期间，函数`do_pi()`消耗了62.57%的CPU周期，是消耗处理器周期最多的热点代码。这跟我们预想的一样。
 
-```
-# ./perf list -h
+## 6.1. cycles原理
 
- Usage: perf list [<options>] [hw|sw|cache|tracepoint|pmu|sdt|event_glob]
+那么Perf是怎么做到的呢？以`cycles`性能事件为例
 
-    -d, --desc            Print extra event descriptions. --no-desc to not print.
-    -v, --long-desc       Print longer event descriptions.
-        --debug           Enable debugging output
-        --deprecated      Print deprecated events.
-        --details         Print information on the perf event names and expressions used internally by events.
-```
+首先，perf会通过系统调用`sys_perf_event_open`在内核中注册一个检测"**cycles**"**事件**的性能计数器。内核根据perf提供的信息在**PMU**上初始化一个**硬件性能计数器**（PMC：Performance Monitoring Counter）。PMC随着CPU周期的增加而自动累加。
 
-执行命令后，perf将给出当前软硬件平台的所有性能事件。输出结果如下图所示。每行后面括弧里的信息表示该事件是**硬件事件**、**软件事件**还是Tracepoint events。
+在**PMU溢出**时，PMU触发一个PMI（Performance Monitoring Interrupt）中断。内核在PMI中断处理函数中保存**PMC的计数值**，触发中断时的**指令地址**（Register IP：Instruction Pointer），**当前时间戳**以及**当前进程**的**PID**，**TID**，**comm**等信息。我们把这些信息统称为一个**采样**（sample）。
 
-![2020-07-19-21-04-27.png](./images/2020-07-19-21-04-27.png)
+内核会将收集到的sample放入用于跟**用户空间**通信的Ring Buffer。**用于空间**的perf分析程序采用**mmap机制**从ring buffer中读入采样，并对其解析。perf根据**pid**, comm等信息可以找到对应的进程。根据**IP**与**ELF文件**中的**符号表**可以查找到触发PMI中断的指令所在的函数。为了能够使perf读到函数名，我们的目标程序必须具备符号表。
 
-......
+如果perf在分析结果中**只看到一串地址**，而**没有对应的函数名**时，通常是由于在**编译时**利用**strip**删除了ELF文件中的符号信息。建议在性能剖析阶段，保留程序中的**sysbol table**与**debug info**等信息。
 
-![2020-07-19-21-06-38.png](./images/2020-07-19-21-06-38.png)
+根据上述的perf采样原理可以得知，perf假设两次采样之间，即两次相邻的PMI中断之间系统执行的是同一个进程的同一个函数。这种假设会带来**一定的误差**，当感觉perf给出的**结果不准**时，不妨提高**采样频率**，perf会给出更加精确的结果。
 
-## 6.5. 性能事件指定错误
+### 6.1.1. Symbols
 
-所以如果指定性能事件失败, 可能会有类似打印
+没有符号表，无法将内存地址翻译成函数和变量名。
 
-```
-./perf record -e syscalls:sys_enter ls
-event syntax error: 'syscalls:sys_enter'
-                     \___ unknown tracepoint
+例如，无符号表的跟踪显示如下
 
-Error:	File /sys/kernel/debug/tracing/events/syscalls/sys_enter not found.
-Hint:	Perhaps this kernel misses some CONFIG_ setting to enable this feature?.
-
-Run 'perf list' for a list of valid events
-
- Usage: perf record [<options>] [<command>]
-    or: perf record [<options>] -- <command> [<options>]
-
-    -e, --event <event>   event selector. use 'perf list' to list available events
-```
+https://developer.aliyun.com/article/65255
